k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: duck-hunt
spec:
  selector:
    app: duck-hunt
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
